# spaghettos_kernel_rs

./: Cargo.toml  README.md  build_kernel.sh  build_kernel_legacy.sh  build_script.sh
src/: lib.rs  main.rs
src/assetts/: mod.rs
src/handlers/: mod.rs
src/print_utils/: mod.rs
src/vga_buffer/: buffer.rs  color.rs  colors.rs  console_writer.rs  mod.rs  writer.rs
